--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,47 @@
 language: node_js
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+
+cache:
+  directories:
+  - node_modules
+  - $HOME/.npm/_prebuilds
+
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+before_script:
+  - npm install -g @angular/cli
+  - npm install
+
+script:
+  - echo 'Build Dist' && echo -en 'travis_fold:start:script.build\\r'
+
+  - ng build --base-href="./"
+
+  - echo -en 'travis_fold:end:script.build\\r'
+  - echo 'Lint Codebase' && echo -en 'travis_fold:start:script.lint\\r'
+
+  - npm run lint
+
+  - echo -en 'travis_fold:end:script.lint\\r'
+  - echo 'Test Codebase' && echo -en 'travis_fold:start:script.test\\r'
+
+  - ng test --single-run --code-coverage
+
+  - echo -en 'travis_fold:end:script.test\\r'
+  - echo 'Package Dist' && echo -en 'travis_fold:start:script.dist\\r'
+
+  - cd dist
+  - zip -r $TRAVIS_BUILD_DIR/dist.zip *
+
+  - cd $TRAVIS_BUILD_DIR
+  - sha256sum $TRAVIS_BUILD_DIR/dist.zip > $TRAVIS_BUILD_DIR/dist.zip.sha256sum.txt
+  - cat $TRAVIS_BUILD_DIR/dist.zip.sha256sum.txt
+
+  - echo -en 'travis_fold:end:script.dist\\r'
