--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "hoek": "^5.0.3",
+    "leaflet-map": "^0.2.1",
+    "mapbox-gl": "^0.47.0",
     "rxjs": "^6.2.0",
     "zone.js": "^0.8.26"
   },
