--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@angular/platform-browser": "6.0.1",
     "@angular/platform-browser-dynamic": "6.0.1",
     "@angular/router": "6.0.1",
+    "@types/mapbox-gl": "^0.47.0",
     "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "hoek": "^5.0.3",
-    "leaflet-map": "^0.2.1",
     "mapbox-gl": "^0.47.0",
     "rxjs": "^6.2.0",
     "zone.js": "^0.8.26"
