--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "6.0.1",
     "@angular/compiler": "6.0.1",
     "@angular/core": "6.0.1",
+    "@angular/flex-layout": "^6.0.0-beta.17",
     "@angular/forms": "6.0.1",
     "@angular/http": "6.0.1",
     "@angular/material": "^6.2.0",
@@ -47,7 +48,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2"
