--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "6.0.1",
     "@types/mapbox-gl": "^0.47.0",
     "core-js": "^2.5.7",
+    "geojson": "^0.5.0",
     "hammerjs": "^2.0.8",
     "hoek": "^5.0.3",
     "mapbox-gl": "^0.47.0",
